Ignore Temp Folder

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
@@ -73,3 +74,4 @@ crashlytics-build.properties
 
 # Removing shader package that's over 100MB
 /VR-Bowling/Library/
+./Temp
